--- a/configure.ac
+++ b/configure.ac
@@ -425,6 +425,15 @@ AC_SUBST(ABI_FLAG)
 
 AC_ARG_VAR(LDCONFIG, [ldconfig tool])
 
+AC_ARG_VAR(TMPPATH, [Path to a directory meant for temporary files for host system (NOTE: Will probably become redundant in the future). Only relevant if host do not have read and write access to /tmp [default=/tmp].])
+
+if test -z "$TMPPATH";
+then
+    TMPPATH="/tmp"
+fi
+
+AC_DEFINE_UNQUOTED([FLINT_TMPPATH], ["$TMPPATH"], [Define to set the default directory for temporary files])
+
 ################################################################################ 
 # check programs and system
 ################################################################################ 
