--- a/CMake/cmake_config.h.in
+++ b/CMake/cmake_config.h.in
@@ -18,6 +18,8 @@
 
 #cmakedefine01 FLINT_USES_FENV
 
+#define FLINT_TMPPATH "@FLINT_TMPPATH@"
+
 #ifdef _MSC_VER
 #define access _access
 #define strcasecmp _stricmp
