Try to fix the deployment once again

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -15,11 +15,13 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 1
 
       - name: "Check for changes in documentation"
         id: check_doc_changes
         run: |
-          if test -z "$(git diff --name-only HEAD~1 HEAD -- doc/)";
+          if test -z "$(git diff --name-only HEAD~1..HEAD -- doc/)";
           then
             echo "No changes in doc/"
             echo "diff=false" >> $GITHUB_OUTPUT
