--- a/configure.ac
+++ b/configure.ac
@@ -461,14 +461,14 @@ AC_ARG_VAR(ABI, [Desired ABI])
 
 AC_ARG_VAR(LDCONFIG, [ldconfig tool])
 
-AC_ARG_VAR(TMPPATH, [Path to a directory meant for temporary files for host system (NOTE: Will probably become redundant in the future). Only relevant if host do not have read and write access to /tmp [default=/tmp].])
+AC_ARG_VAR(TMPDIR, [Specify directory meant for temporary files for host system. Only relevant if host do not have read and write access to /tmp [default=/tmp].])
 
-if test -z "$TMPPATH";
+if test -z "$TMPDIR";
 then
-    TMPPATH="/tmp"
+    TMPDIR="/tmp"
 fi
 
-AC_DEFINE_UNQUOTED([FLINT_TMPPATH], ["$TMPPATH"], [Define to set the default directory for temporary files])
+AC_DEFINE_UNQUOTED([FLINT_TMPDIR], ["$TMPDIR"], [Define to set the default directory for temporary files])
 
 ################################################################################ 
 # check programs and system
