--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -433,9 +433,9 @@ jobs:
       - name: "Configure"
         run: |
           ./bootstrap.sh
-          # We need to specify TMPPATH as we do not have write access to the
+          # We need to specify TMPDIR as we do not have write access to the
           # CI's /tmp directory.
-          ./configure CC=${CC} CFLAGS="${CFLAGS}" TMPPATH="." ${EXTRA_OPTIONS}
+          ./configure CC=${CC} CFLAGS="${CFLAGS}" TMPDIR="." ${EXTRA_OPTIONS}
 
       - name: "Compile"
         run: |
