CI: Split make tests and make check

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -37,10 +37,15 @@ jobs:
           ./bootstrap.sh
           ./configure CC=${CC} --enable-avx2 TESTCFLAGS="${TESTCFLAGS}" --disable-static
 
-      - name: "Compile"
+      - name: "Compile library"
         run: |
           $MAKE
           ldd libflint.so
+
+      - name: "Compile tests"
+        run: |
+          export FLINT_TEST_MULTIPLIER=10
+          $MAKE tests
 
       - name: "Check"
         run: |
@@ -85,10 +90,15 @@ jobs:
           ./bootstrap.sh
           ./configure CC=${CC} CFLAGS="${CFLAGS}" --with-gmp=/usr --with-mpfr=/usr --enable-assert --disable-static
 
-      - name: "Compile"
+      - name: "Compile library"
         run: |
           $MAKE
           ldd libflint.so
+
+      - name: "Compile tests"
+        run: |
+          export FLINT_TEST_MULTIPLIER=2
+          $MAKE tests
 
       - name: "Check"
         run: |
@@ -141,9 +151,14 @@ jobs:
               --with-blas=$(brew --prefix)/opt/openblas \
               ${EXTRA_OPTIONS}
 
-      - name: "Compile"
+      - name: "Compile library"
         run: |
           $MAKE
+
+      - name: "Compile tests"
+        run: |
+          export FLINT_TEST_MULTIPLIER=3
+          $MAKE tests
 
       - name: "Check"
         run: |
@@ -286,10 +301,16 @@ jobs:
           ./bootstrap.sh
           ./configure CC=${CC} CFLAGS="${CFLAGS}" ${EXTRA_OPTIONS}
 
-      - name: "Compile"
+      - name: "Compile library"
         run: |
           cd ${REPO}
           ${MAKE}
+
+      - name: "Compile tests"
+        run: |
+          cd ${REPO}
+          export FLINT_TEST_MULTIPLIER=1
+          $MAKE tests
 
       - name: "Check"
         run: |
@@ -338,10 +359,15 @@ jobs:
           ./bootstrap.sh
           ./configure CC=${CC} CFLAGS="${CFLAGS}" ${EXTRA_OPTIONS}
 
-      - name: "Compile"
+      - name: "Compile library"
         run: |
           $MAKE
           ldd libflint.so
+
+      - name: "Compile tests"
+        run: |
+          export FLINT_TEST_MULTIPLIER=5
+          $MAKE tests
 
       - name: "Check"
         run: |
@@ -387,7 +413,7 @@ jobs:
           cmake -G"Unix Makefiles" -DWITH_NTL=no -DBUILD_TESTING=yes \
               -DCMAKE_BUILD_TYPE=Release -DCMAKE_PREFIX_PATH=${LOCAL} ..
 
-      - name: "Compile"
+      - name: "Compile library"
         run: |
           cd build
           $MAKE
@@ -441,9 +467,14 @@ jobs:
           # CI's /tmp directory.
           ./configure CC=${CC} CFLAGS="${CFLAGS}" TMPDIR="." ${EXTRA_OPTIONS}
 
-      - name: "Compile"
+      - name: "Compile library"
         run: |
           ${MAKE}
+
+      - name: "Compile tests"
+        run: |
+          export FLINT_TEST_MULTIPLIER=0.5
+          ${MAKE} tests
 
       - name: "Check"
         run: |
