--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -119,8 +119,9 @@ jobs:
 
     runs-on: macos-latest
 
+    # NOTE: macOS only has a maximum of 256 allowed open file descriptors
     env:
-      MAKE: "gmake -j --output-sync=target"
+      MAKE: "gmake -j --output-sync=target --max-load=220"
       CFLAGS: "-Wall"
       EXTRA_OPTIONS: "--disable-static --enable-shared"
       CC: "gcc"
