Add acb_theta to Makefile.in

--- a/Makefile.in
+++ b/Makefile.in
@@ -163,7 +163,7 @@ HEADER_DIRS :=                                                              \
         acb_mat         acb_poly        acb_calc        acb_hypgeom         \
         arb_fmpz_poly   arb_fpwrap                                          \
         acb_dft         acb_elliptic    acb_modular     acb_dirichlet       \
-        dirichlet       bernoulli       hypgeom                             \
+        acb_theta		dirichlet       bernoulli       hypgeom             \
                                                                             \
         gr              gr_generic      gr_vec          gr_mat              \
         gr_poly         gr_mpoly        gr_special                          \
