Enhance 'make dist', add GitHub release workflow
- a new file VERSION is the only place storing the FLINT version
- generate src/flint.h from src/flint.h.in so we can insert the version
- revise `make dist` to call a helper script `dev/make_dist.sh`, which
  creates all relevant archives, which include files generated by autoconf
- add GitHub Workflows to tests creation and usability of these archives
  on various conditions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -211,7 +211,10 @@ configure_file(
     ${CMAKE_CURRENT_SOURCE_DIR}/CMake/cmake_config.h.in
     ${CMAKE_CURRENT_SOURCE_DIR}/src/flint-config.h
 )
-
+configure_file(
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/flint.h.in
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/flint.h
+)
 configure_file(
     ${CMAKE_CURRENT_SOURCE_DIR}/src/fmpz/link/fmpz_${MEMORY_MANAGER}.c
     ${CMAKE_CURRENT_SOURCE_DIR}/src/fmpz/fmpz.c
